# nice-slam-cpp

./: CMakeLists.txt  Dockerfile  README.md  run_docker.sh
include/: Mapper.h  Renderer.h  Tracker.h
include/inputs/: CoFusionReader.h
include/models/: DenseLayer.h  GaussianFFT.h  MLP.h  MLP_no_xyz.h  NICE.h
include/torchlib/: utils.h
src/: Mapper.cpp  Renderer.cpp  Tracker.cpp  main.cpp
src/inputs/: CoFusionReader.cpp
src/models/: GaussianFFT.cpp  MLP.cpp  MLP_no_xyz.cpp  NICE.cpp
